Added programming languages.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <body>
 <h1>Carsten Konyn</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I am currently a UO student.</p>
+<p>Programming languages I have experience with:</p>
+<ul>
+	<li>Python</li>
+	<li>C</li>
+	<li>C# (Not too much though.)</li>
+</ul>
 </body>
 </html>
