Adds css and a project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
 <h1>Carsten Konyn</h1>
 <p>I am currently a UO student.</p>
@@ -8,6 +11,11 @@
 	<li>Python</li>
 	<li>C</li>
 	<li>C# (Not too much though.)</li>
+</ul>
+ <a href="https://github.com/Uristthedorf">My github</a>
+ <p>A project I've done:</p>
+ <ul>
+	<li><a href="https://github.com/Uristthedorf">Group project where we made a video game in Unity.</a></li>
 </ul>
 </body>
 </html>
