Fixed Project Link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <a href="https://github.com/Uristthedorf">My github</a>
  <p>A project I've done:</p>
  <ul>
-	<li><a href="https://github.com/Uristthedorf">Group project where we made a video game in Unity.</a></li>
+	<li><a href="https://github.com/jbermud4/uoregon-cs410">Group project where we made a video game in Unity.</a></li>
 </ul>
 </body>
 </html>
